[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["kexin <kexin_l@126.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
